kind-goodnotes-k8s-demo/apps/bar/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bar
spec:
  selector: { app: http-echo, variant: bar }
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5678
