kind-goodnotes-k8s-demo/apps/bar/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: bar.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bar
                port: { number: 80 }
